<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/bNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_next"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayoutQuestionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/baloo_thambi"
                android:text="@string/question_one"
                android:textColor="@color/colorTextHeader"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/rGQuestionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/question_one_answone"
                    android:textColor="@drawable/radio_color_text_selector"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/question_one_answtwo"
                    android:textColor="@drawable/radio_color_text_selector"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/question_one_answthree"
                    android:textColor="@drawable/radio_color_text_selector"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:padding="10dp"
                    android:text="@string/question_one_answfour"
                    android:textColor="@drawable/radio_color_text_selector"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/question_one_answfive"
                    android:textColor="@drawable/radio_color_text_selector"
                    android:textSize="20sp" />

            </RadioGroup>



        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
