<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/done"
        android:textColor="@color/colorTextHeader"
        android:textSize="28sp" />

    <Button
        android:id="@+id/bClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/btn_close"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/btn_start"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</RelativeLayout>